@@ -95,3 +95,18 @@ Bias_correction::Bias_correction(const sequence &seq):
 		++m;
 	}
 }
+
+int Bias_correction::operator()(const Hsp_data &hsp) const
+{
+	float s = 0;
+	for (Hsp_data::Iterator i = hsp.begin(); i.good(); ++i) {
+		switch (i.op()) {
+		case op_match:
+		case op_substitution:
+			s += (*this)[i.query_pos];
+		default:
+			;
+		}
+	}
+	return (int)s;
+}
