@@ -1,5 +1,7 @@
 [0.8.31]
 - renamed option --run-len to --min-orf
+- added compositional score adjustments (option --comp-based-stats (0,1), enabled by default)
+- removed --single-domain option and replaced by --max-hsps
 
 [0.8.30]
 - slightly improved sensitivity
